@@ -1,14 +1,15 @@
-FROM gradle:8.7.0-jdk17 AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon -x test
+FROM openjdk:17-slim
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
+
+COPY gradlew /app/
+COPY gradle /app/gradle
+COPY build.gradle /app/
+
+RUN ./gradlew --no-daemon dependencies
+
+COPY build/libs/*.jar app.jar
 
 EXPOSE 8080
 
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
